Fix jumpy behaviour when dropdown expands

--- a/micromic/assets/css/theme.css
+++ b/micromic/assets/css/theme.css
@@ -48,7 +48,8 @@ h1 a:hover, h1 a:active, h1 a:focus {text-decoration: underline;}
   text-decoration: none;
 }
 
-.header_dropdown {padding: 10px;}
+.header_dropdown {padding: 10px; overflow: hidden;}
+.header_dropdown ul {float: left;}
 .header_dropdown li {margin-bottom: 5px;}
 .header_dropdown p {float: right; text-align: right;}
 .header_dropdown p span {display: block;}
